--- a/css/police_donations.css
+++ b/css/police_donations.css
@@ -121,9 +121,9 @@ h1, h2, h3, h4 {
 
 .logo {
   display: inline; 
-  margin-left: 10px;
-  margin-right: 10px;
   margin-bottom: 10px;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .directions {
