--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -1,17 +1,31 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+	position: relative;
+	min-height: 100%;
 }
 body {
-  margin-bottom: 175px; /* Margin bottom by footer height */
+	margin-bottom: 175px; /* Margin bottom by footer height */
 }
 
 #footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 145px; /* Set the fixed height of the footer here */
-  /*line-height: 200px;  Vertically center the text there */
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 145px; /* Set the fixed height of the footer here */
+	/*line-height: 200px;  Vertically center the text there */
+}
+
+#footer a {
+	text-decoration: none;
+}
+
+/*Adjustments for small screens*/
+@media screen and (max-width: 500px) {
+	#footer {
+		height: 165px;
+	}
+	body {
+		margin-bottom: 195px; /* Margin bottom by footer height */
+	}
 }
