--- a/css/police_donations.css
+++ b/css/police_donations.css
@@ -155,3 +155,8 @@ h1, h2, h3, h4 {
   text-decoration: none;
   background-color: #f5f5f5;
 }
+
+#title_panel h1 a {
+  text-decoration: none;
+    color: inherit;
+}
